tests/error/fail.vx
func main() -> i32 {
    fail "Something went wrong";
    // return 0;
}
